--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ MANIFEST
 .env.development.local
 .env.test.local
 .env.production.local
+.cursorignore
+.dockerignore
+.gitignore
+.gitattributes
 
 # IDE
 .vscode/
