--- a/env.example
+++ b/env.example
@@ -1,3 +1,7 @@
+LOCAL_LLM_MODEL=llama3.1:8b
+LOCAL_LLM_BASE_URL=http://localhost:8090/v1
+USE_LOCAL_LLM=true
+
 # Database Configuration
 # SQLite (async) is the default local dev database
 DATABASE_URL=sqlite+aiosqlite:///./data/app.db
@@ -43,17 +47,24 @@ GOOGLE_VISION_CREDENTIALS=path/to/your/google-credentials.json
 # LLM Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 DEFAULT_LLM_MODEL=gpt-3.5-turbo
-MAX_TOKENS=400
-TEMPERATURE=0.7
+MAX_TOKENS=0
+TEMPERATURE=0.1
 
 # Local LLM Configuration (OpenAI-compatible)
 USE_LOCAL_LLM=true
 LOCAL_LLM_BASE_URL=http://localhost:8090/v1
-LOCAL_LLM_MODEL=llama3.1:8b-instruct-q4_0
+LOCAL_LLM_MODEL=llama3.1:8b
+
+# LLM Response Configuration
+LLM_RESPONSE_MAX_TOKENS=0
+LLM_TIMEOUT=0.0
+LLM_TEMPERATURE=0.1
 
 # Retrieval Configuration
-RETRIEVAL_K=5
-SIMILARITY_THRESHOLD=0.7
+RETRIEVAL_K=100
+RERANK_TOP_K=32
+USE_CROSS_ENCODER=true
+SIMILARITY_THRESHOLD=0.0
 
 # Performance
 BATCH_SIZE=32
