--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ aiofiles>=23.2.0,<24.0.0
 # OCR and Table Extraction
 pdfplumber>=0.10.0,<1.0.0
 easyocr>=1.7.0,<2.0.0
-Pillow>=10.0.0,<11.0.0
-pdf2image>=3.1.0,<4.0.0
+Pillow>=10.4.0,<11.0.0
+pdf2image>=1.16.0,<2.0.0
 requests>=2.31.0,<3.0.0
-numpy>=1.24.0,<2.0.0
+numpy>=1.26.0,<2.0.0
+opencv-python>=4.8.0,<5.0.0
+camelot-py[cv]>=0.11.0,<1.0.0
 
 # Vector Database & Embeddings
 chromadb>=0.4.0,<0.5.0
