--- a/ui/package.json
+++ b/ui/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.294.0",
-    "recharts": "^2.8.0",
     "react-hot-toast": "^2.4.1",
-    "clsx": "^2.0.0",
+    "react-markdown": "^9.1.0",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^2.8.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
